[gd_scene load_steps=8 format=3 uid="uid://c4v8ewrr1fjce"]

[ext_resource type="Script" uid="uid://wjo6ma1qy8rm" path="res://scripts/game_collect.gd" id="1_ralow"]
[ext_resource type="PackedScene" uid="uid://bnyi5avnv7e5j" path="res://scenes/game_collect_item.tscn" id="2_gd3mx"]
[ext_resource type="PackedScene" uid="uid://xsl8nh6qj315" path="res://scenes/game_collect_obstacle.tscn" id="3_7i5y5"]
[ext_resource type="Script" uid="uid://4ilsdvclmd6e" path="res://scripts/game_collect_camera.gd" id="4_nflw2"]
[ext_resource type="Script" uid="uid://buyffdpaumlia" path="res://scripts/game_collect_player.gd" id="5_rog43"]
[ext_resource type="Texture2D" uid="uid://cpaak2loaffat" path="res://assets/sprites/Sprite Pack 6/Sprite Pack 6/1 - Penguin/Jump (16 x 16).png" id="6_byj31"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y0jpq"]

[node name="CollectGame" type="Node2D"]
script = ExtResource("1_ralow")
item_scene = ExtResource("2_gd3mx")
obstacle_scene = ExtResource("3_7i5y5")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("4_nflw2")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(71, 20)
script = ExtResource("5_rog43")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("6_byj31")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_y0jpq")

[node name="TimerGame" type="Timer" parent="."]

[node name="TimerDisplay" type="Timer" parent="."]

[node name="TimerInterval" type="Timer" parent="."]
